# GirlsOfSteelFRC

./: .bazelignore  .bazelrc-buildbuddy  gos_vendordep_template.json  settings.gradle  workspace_status.sh
.github/workflows/: bazel.yml  gradle.yml  lint.yml  publish.yml  shuffleboard_gen.yml  update_checker.yml
build_scripts/bazel/: java_rules.bzl
codelabs/basic_simulator/: build.gradle
codelabs/basic_simulator/.run/: Debug Robot via IP.run.xml  Debug Robot via USB.run.xml
codelabs/basic_simulator/src/main/java/com/gos/codelabs/basic_simulator/subsystems/: BUILD.bazel  ChassisSubsystem.java  ElevatorSubsystem.java  PunchSubsystem.java
codelabs/basic_simulator/styleguide/: pmd-ruleset.xml  styleguide.gradle
codelabs/first_robot_code/: build.gradle
codelabs/gitflow/: build.gradle
codelabs/pid/: build.gradle
codelabs/pid/src/main/java/com/gos/codelabs/pid/commands/auton/: BUILD.bazel  DriveTrajectoryCommand.java
evergreen_robots/ChassisProject/: build.gradle
evergreen_robots/SCRAWestCoastDrive/: build.gradle
evergreen_robots/SwerveChassis/: build.gradle
libraries/DashboardGenerator/: generate_dashboard.py
libraries/DashboardGenerator/lib/: generate_webdash.py  template_helpers.py
libraries/GirlsOfSteelLib/: build.gradle
libraries/GirlsOfSteelLibPathing/: build.gradle
libraries/GirlsOfSteelLibPhoenix6/: build.gradle
libraries/GirlsOfSteelLibPhotonVision/: build.gradle
libraries/GirlsOfSteelLibRev/: build.gradle
libraries/GirlsOfSteelLibRev/vendordeps/: SnobotSim.json
libraries/ShuffleboardGenerator/: BUILD.bazel
libraries/scripts/datalog_parser/: BUILD.bazel
libraries/scripts/gradle/: run_spotless.py
libraries/scripts/updater/: replace_old_names.py  update_everything.py  update_vendor_deps.py  utils.py
old_robots/y2012/Watson2012/: BUILD.bazel
old_robots/y2012/Watson2012/src/main/java/com/gos/rebound_rumble/objects/: BUILD.bazel
old_robots/y2013/Eve2013/src/main/java/com/gos/ultimate_ascent/commands/: BUILD.bazel
old_robots/y2013/Eve2013/src/main/java/com/gos/ultimate_ascent/tests/: BUILD.bazel
old_robots/y2014/GOS2014/src/main/java/com/gos/aerial_assist/: BUILD.bazel
old_robots/y2014/GOS2014/src/main/java/com/gos/aerial_assist/commands/: BUILD.bazel
old_robots/y2014/GOS2014/src/main/java/com/gos/aerial_assist/objects/: BUILD.bazel
old_robots/y2014/GOS2014/src/main/java/com/gos/aerial_assist/subsystems/: BUILD.bazel
old_robots/y2014/GOS2014/src/main/java/com/gos/aerial_assist/tests/: BUILD.bazel
old_robots/y2015/GoS2015/src/main/java/com/gos/recycle_rush/robot/commands/autonomous/: BUILD.bazel
old_robots/y2016/TeamFBI_EOPP/src/main/java/com/gos/preseason2016/team_fbi/robot/subsystems/: BUILD.bazel
old_robots/y2016/TeamSquirtle/src/main/java/com/gos/preseason2016/team_squirtle/robot/commands/autonomous/: BUILD.bazel
old_robots/y2017/Secondary_Human_Training_Golem/src/main/java/com/gos/steam_works/commands/autonomous/: BUILD.bazel
old_robots/y2017/Team1/src/main/java/com/gos/preseason2017/team1/robot/commands/: BUILD.bazel
old_robots/y2017/Team1/src/main/java/com/gos/preseason2017/team1/robot/commands/autonomous/: BUILD.bazel
old_robots/y2017/Team_2/src/main/java/com/gos/preseason2017/team2/robot/commands/autonomous/planning/: BUILD.bazel
old_robots/y2022/MEPI/: build.gradle
styleguide/: pmd-ruleset.xml
y2018/2018PowerUp/src/main/java/com/gos/power_up/commands/autonomous/: BUILD.bazel
y2019/2019DeepSpace/src/main/java/com/gos/deep_space/: BUILD.bazel
y2019/2019DeepSpace/src/main/java/com/gos/deep_space/commands/: BUILD.bazel
y2019/2019DeepSpace/src/main/java/com/gos/deep_space/subsystems/: BUILD.bazel
y2019/OffenseBot/src/main/java/com/gos/offense2019/: BUILD.bazel
y2019/OffenseBot/src/main/java/com/gos/offense2019/commands/: BUILD.bazel
y2019/OffenseBot/src/main/java/com/gos/offense2019/subsystems/: BUILD.bazel
y2020/2020InfiniteRecharge/: BUILD.bazel
y2021/OutreachBot/: BUILD.bazel
y2022/CallistoRewrite/: BUILD.bazel
y2022/RapidReact/log_analyzer/: BUILD.bazel
y2022/RapidReact/src/main/java/com/gos/rapidreact/commands/debug/: BUILD.bazel
y2022/RapidReact/src/main/java/com/gos/rapidreact/subsystems/: BUILD.bazel
y2023/ChargedUp/: BUILD.bazel
y2024/Crescendo/: .gitignore  ChoreoAutos.chor  WebDash.html  build.gradle  choreo_clear_trajectory.py  networktables.json  networktables.json.bck  pp_to_choreo.py  simgui-ds.json  simgui.json
y2024/Crescendo/.pathplanner/: settings.json
y2024/Crescendo/src/main/java/com/gos/crescendo2024/: BUILD.bazel  FieldConstants.java  GoSField.java  GoSField24.java  ObjectDetection.java  PathPlannerUtils.java  Robot.java  RobotContainer.java  SpeakerLookupTable.java  VisionManagerAprilTag.java  VisionManagerGamePiece.java
y2024/Crescendo/src/main/java/com/gos/crescendo2024/commands/: ArmPivotJoystickCommand.java  CombinedCommands.java  CombinedCommandsUtil.java  TeleopDriveWhileStaringAtAngleCommand.java  TurnToPointSwerveDrive.java
y2024/Crescendo/src/main/java/com/gos/crescendo2024/leds/: HasGamePiecePattern.java  TeleopPattern.java
y2024/Crescendo/src/main/java/com/gos/crescendo2024/subsystems/: ArmPivotSubsystem.java  ChassisSubsystem.java  HangerSubsystem.java  IntakeSubsystem.java  LedManagerSubsystem.java  PhotonVisionSubsystem.java  ShooterSubsystem.java
y2024/Crescendo/src/main/java/com/gos/crescendo2024/subsystems/sysid/: ArmPivotSysId.java  ShooterSysId.java
y2024/Crescendo/vendordeps/: ChoreoLib.json  PathplannerLib.json
y2024/CrescendoWebDashboard/Dashboard/: .eslintrc.json  convert_embeded_dashboard.py  index.html  package-lock.json  package.json  software.html
y2024/CrescendoWebDashboard/Plugin/: .gitignore  package-lock.json  package.json  vite.config.ts
y2024/CrescendoWebdash/: .eslintrc.json  .gitignore  index.html  package-lock.json  package.json  vite.config.ts
y2024/CrescendoWebdash/src/: index.ts  (+4 more)
y2024/CrescendoWebdash3/: .eslintrc.json  convert_embeded_dashboard.py  drivers.html  package-lock.json  package.json  simulation.html  vite.config.ts
y2024/CrescendoWebdash4/: package-lock.json  package.json
(+317 files in other folders)
