load("//build_scripts/bazel:java_rules.bzl", "gos_java_robot")

gos_java_robot(
    name = "CallistoRewrite",
    srcs = glob(["src/main/java/**/*.java"]),
    main_class = "com.gos.calisto.v2.Main",
    deps = [
        "@bazelrio//libraries/java/wpilib/new_commands",
        "@bazelrio//libraries/java/wpilib/wpilibj",
        "@snobot_sim//jar",
    ],
)
