load("//build_scripts/bazel:python_rules.bzl", "gos_py_binary", "gos_py_library")
load("@gos_pip_deps//:requirements.bzl", "requirement")

gos_py_binary(
    name = "make_plots",
    srcs = ["make_plots.py"],
    deps = [
        "//libraries/scripts/datalog_parser",
        requirement("plotly"),
    ]
)