load("//build_scripts/bazel:java_rules.bzl", "gos_java_library", "gos_java_robot")

gos_java_library(
    name = "RobotMap",
    srcs = ["RobotMap.java"],
    visibility = ["//y2019/OffenseBot:__subpackages__"],
)

gos_java_robot(
    name = "offense2019",
    srcs = glob(["*.java"]),
    main_class = "com.gos.offense2019.Main",
    visibility = ["//y2019/OffenseBot:__subpackages__"],
    deps = [
        "//libraries/GirlsOfSteelLib",
        "//y2019/OffenseBot/src/main/java/com/gos/offense2019/commands",
        "//y2019/OffenseBot/src/main/java/com/gos/offense2019/subsystems",
        "@bazelrio//libraries/java/ctre/phoenix",
        "@bazelrio//libraries/java/wpilib/cameraserver",
        "@bazelrio//libraries/java/wpilib/cscore",
        "@bazelrio//libraries/java/wpilib/new_commands",
        "@bazelrio//libraries/java/wpilib/ntcore",
        "@bazelrio//libraries/java/wpilib/wpilibj",
    ],
)
