load("//build_scripts/bazel:java_rules.bzl", "gos_java_library", "gos_java_robot")

gos_java_robot(
    name = "crescendo2024",
    srcs = glob(["**/*.java"]),
    main_class = "com.gos.crescendo2024.Main",
    visibility = ["//y2024/SwerveChassis:__subpackages__"],
    deps = [
        "//libraries/GirlsOfSteelLib/src/main/java/com/gos/lib",
        "//libraries/GirlsOfSteelLib/src/main/java/com/gos/lib/alerts",
        "//libraries/GirlsOfSteelLib/src/main/java/com/gos/lib/field",
        "//libraries/GirlsOfSteelLib/src/main/java/com/gos/lib/led",
        "//libraries/GirlsOfSteelLib/src/main/java/com/gos/lib/led/mirrored",
        "//libraries/GirlsOfSteelLib/src/main/java/com/gos/lib/logging",
        "//libraries/GirlsOfSteelLib/src/main/java/com/gos/lib/properties",
        "//libraries/GirlsOfSteelLib/src/main/java/com/gos/lib/properties/feedforward",
        "//libraries/GirlsOfSteelLib/src/main/java/com/gos/lib/properties/pid",
        "//libraries/GirlsOfSteelLib/src/main/java/org/littletonrobotics/frc2023/util:mechanical_advantage",
        "//libraries/GirlsOfSteelLibPhotonVision/src/main/java/com/gos/lib/photonvision",
        "//libraries/GirlsOfSteelLibRev/src/main/java/com/gos/lib/rev",
        "//libraries/GirlsOfSteelLibRev/src/main/java/com/gos/lib/rev/alerts",
        "//libraries/GirlsOfSteelLibRev/src/main/java/com/gos/lib/rev/properties/pid",
        "//libraries/GirlsOfSteelLibRev/src/main/java/com/gos/lib/rev/swerve",
        "@bzlmodrio-allwpilib//libraries/java/apriltag",
        "@bzlmodrio-allwpilib//libraries/java/hal",
        "@bzlmodrio-allwpilib//libraries/java/ntcore",
        "@bzlmodrio-allwpilib//libraries/java/wpilibNewCommands",
        "@bzlmodrio-allwpilib//libraries/java/wpilibj",
        "@bzlmodrio-allwpilib//libraries/java/wpimath",
        "@bzlmodrio-allwpilib//libraries/java/wpiunits",
        "@bzlmodrio-allwpilib//libraries/java/wpiutil",
        "@bzlmodrio-pathplannerlib//libraries/java/pathplannerlib-java",
        "@bzlmodrio-phoenix6//libraries/java/wpiapi-java",
        "@bzlmodrio-photonlib//libraries/java/photonlib-java",
        "@bzlmodrio-photonlib//libraries/java/photontargeting-java",
        "@bzlmodrio-revlib//libraries/java/revlib-java",
        "@maven//:org_snobotv2_snobot_sim_java_base",
        "@maven//:org_snobotv2_snobot_sim_java_phoenix6",
        "@maven//:org_snobotv2_snobot_sim_java_revlib",
    ],
)
