load("//build_scripts/bazel:java_rules.bzl", "gos_java_library", "gos_java_robot")

gos_java_library(
    name = "RobotMap",
    srcs = ["RobotMap.java", "Configuration.java"],
    visibility = ["//old_robots/y2014/GOS2014:__subpackages__"],
    deps = [
        "@bazelrio//libraries/java/wpilib/wpilibj",
    ]
)

gos_java_robot(
    name = "aerial_assist",
    srcs = glob(["*.java"]),
    main_class = "com.gos.aerial_assist.Main",
    visibility = ["//old_robots/y2014/GOS2014:__subpackages__"],
    deps = [
        "//libraries/GirlsOfSteelLib",
        "//old_robots/y2014/GOS2014/src/main/java/com/gos/aerial_assist/commands",
        "//old_robots/y2014/GOS2014/src/main/java/com/gos/aerial_assist/subsystems",
        "//old_robots/y2014/GOS2014/src/main/java/com/gos/aerial_assist/tests",
        "//old_robots/y2014/GOS2014/src/main/java/com/gos/aerial_assist/objects:AutonomousChooser",
        "@bazelrio//libraries/java/ctre/phoenix",
        "@bazelrio//libraries/java/wpilib/cameraserver",
        "@bazelrio//libraries/java/wpilib/cscore",
        "@bazelrio//libraries/java/wpilib/new_commands",
        "@bazelrio//libraries/java/wpilib/ntcore",
        "@bazelrio//libraries/java/wpilib/wpilibj",
        "//old_robots/y2014/GOS2014/src/main/java/com/gos/aerial_assist/objects:Camera"
    ],
)
