load("//build_scripts/bazel:java_rules.bzl", "gos_java_library")

gos_java_library(
    name = "commands",
    srcs = glob(["*.java"]),
    visibility = ["//y2019/OffenseBot:__subpackages__"],
    deps = [
        "//y2019/OffenseBot/src/main/java/com/gos/offense2019:RobotMap",
        "//y2019/OffenseBot/src/main/java/com/gos/offense2019/subsystems",
        "@bazelrio//libraries/java/ctre/phoenix",
        "@bazelrio//libraries/java/wpilib/cameraserver",
        "@bazelrio//libraries/java/wpilib/cscore",
        "@bazelrio//libraries/java/wpilib/new_commands",
        "@bazelrio//libraries/java/wpilib/ntcore",
        "@bazelrio//libraries/java/wpilib/wpilibj",
        "@bazelrio//libraries/java/wpilib/wpimath",
    ],
)
