load("//build_scripts/bazel:java_rules.bzl", "gos_java_library")

gos_java_library(
    name = "subsystems",
    srcs = glob(["*.java"]),
    visibility = ["//codelabs/basic_simulator:__subpackages__"],
    deps = [
        "//libraries/GirlsOfSteelLib",
        "//libraries/GirlsOfSteelLibNavx",
        "//libraries/GirlsOfSteelLibRev",
        "//codelabs/basic_simulator/src/main/java/com/gos/codelabs/basic_simulator:Constants",
        "//codelabs/basic_simulator/src/main/java/com/gos/codelabs/basic_simulator:SmartDashboardNames",
        "@bazelrio//libraries/java/ctre/phoenix",
        "@bazelrio//libraries/java/rev/revlib",
        "@bazelrio//libraries/java/wpilib/cameraserver",
        "@bazelrio//libraries/java/wpilib/cscore",
        "@bazelrio//libraries/java/wpilib/new_commands",
        "@bazelrio//libraries/java/wpilib/ntcore",
        "@bazelrio//libraries/java/wpilib/wpilibj",
        "@bazelrio//libraries/java/wpilib/wpimath",
        "@snobot_sim//jar",
    ],
)
