load("//build_scripts/bazel:java_rules.bzl", "gos_java_library")

gos_java_library(
    name = "EncoderGoSPidController",
    srcs = ["EncoderGoSPidController.java"],
    visibility = ["//old_robots/y2012/Watson2012:__subpackages__"],
    deps = [
        "//libraries/GirlsOfSteelLib",
        "//libraries/GirlsOfSteelLibNavx",
        "//libraries/GirlsOfSteelLibRev",
        "//old_robots/y2012/Watson2012/src/main/java/com/gos/rebound_rumble:RobotMap",
        "@bazelrio//libraries/java/ctre/phoenix",
        "@bazelrio//libraries/java/rev/revlib",
        "@bazelrio//libraries/java/wpilib/cameraserver",
        "@bazelrio//libraries/java/wpilib/cscore",
        "@bazelrio//libraries/java/wpilib/new_commands",
        "@bazelrio//libraries/java/wpilib/ntcore",
        "@bazelrio//libraries/java/wpilib/wpilibj",
        "@bazelrio//libraries/java/wpilib/wpimath",
        "@snobot_sim//jar",
    ],
)

gos_java_library(
    name = "Camera",
    srcs = ["Camera.java"],
    visibility = ["//old_robots/y2012/Watson2012:__subpackages__"],
    deps = [
        "//libraries/GirlsOfSteelLib",
        "//libraries/GirlsOfSteelLibNavx",
        "//libraries/GirlsOfSteelLibRev",
        "//old_robots/y2012/Watson2012/src/main/java/com/gos/rebound_rumble:RobotMap",
        "@bazelrio//libraries/java/ctre/phoenix",
        "@bazelrio//libraries/java/rev/revlib",
        "@bazelrio//libraries/java/wpilib/cameraserver",
        "@bazelrio//libraries/java/wpilib/cscore",
        "@bazelrio//libraries/java/wpilib/new_commands",
        "@bazelrio//libraries/java/wpilib/ntcore",
        "@bazelrio//libraries/java/wpilib/wpilibj",
        "@bazelrio//libraries/java/wpilib/wpimath",
        "@snobot_sim//jar",
    ],
)

gos_java_library(
    name = "SmoothEncoder",
    srcs = ["SmoothEncoder.java"],
    visibility = ["//old_robots/y2012/Watson2012:__subpackages__"],
    deps = [
        "//libraries/GirlsOfSteelLib",
        "//libraries/GirlsOfSteelLibNavx",
        "//libraries/GirlsOfSteelLibRev",
        "//old_robots/y2012/Watson2012/src/main/java/com/gos/rebound_rumble:RobotMap",
        "@bazelrio//libraries/java/ctre/phoenix",
        "@bazelrio//libraries/java/rev/revlib",
        "@bazelrio//libraries/java/wpilib/cameraserver",
        "@bazelrio//libraries/java/wpilib/cscore",
        "@bazelrio//libraries/java/wpilib/new_commands",
        "@bazelrio//libraries/java/wpilib/ntcore",
        "@bazelrio//libraries/java/wpilib/wpilibj",
        "@bazelrio//libraries/java/wpilib/wpimath",
        "@snobot_sim//jar",
    ],
)

gos_java_library(
    name = "ShooterLookupTable",
    srcs = ["ShooterLookupTable.java"],
    visibility = ["//old_robots/y2012/Watson2012:__subpackages__"],
    deps = [
        "//libraries/GirlsOfSteelLib",
        "//libraries/GirlsOfSteelLibNavx",
        "//libraries/GirlsOfSteelLibRev",
        "//old_robots/y2012/Watson2012/src/main/java/com/gos/rebound_rumble:RobotMap",
        "@bazelrio//libraries/java/ctre/phoenix",
        "@bazelrio//libraries/java/rev/revlib",
        "@bazelrio//libraries/java/wpilib/cameraserver",
        "@bazelrio//libraries/java/wpilib/cscore",
        "@bazelrio//libraries/java/wpilib/new_commands",
        "@bazelrio//libraries/java/wpilib/ntcore",
        "@bazelrio//libraries/java/wpilib/wpilibj",
        "@bazelrio//libraries/java/wpilib/wpimath",
        "@snobot_sim//jar",
    ],
)

gos_java_library(
    name = "AutonomousChooser",
    srcs = ["AutonomousChooser.java"],
    visibility = ["//old_robots/y2012/Watson2012:__subpackages__"],
    deps = [
        "//libraries/GirlsOfSteelLib",
        "//libraries/GirlsOfSteelLibNavx",
        "//libraries/GirlsOfSteelLibRev",
        "//old_robots/y2012/Watson2012/src/main/java/com/gos/rebound_rumble:RobotMap",
        "//old_robots/y2012/Watson2012/src/main/java/com/gos/rebound_rumble/commands",
        "//old_robots/y2012/Watson2012/src/main/java/com/gos/rebound_rumble/subsystems",
        "@bazelrio//libraries/java/ctre/phoenix",
        "@bazelrio//libraries/java/rev/revlib",
        "@bazelrio//libraries/java/wpilib/cameraserver",
        "@bazelrio//libraries/java/wpilib/cscore",
        "@bazelrio//libraries/java/wpilib/new_commands",
        "@bazelrio//libraries/java/wpilib/ntcore",
        "@bazelrio//libraries/java/wpilib/wpilibj",
        "@bazelrio//libraries/java/wpilib/wpimath",
        "@snobot_sim//jar",
    ],
)
