load("//build_scripts/bazel:java_rules.bzl", "gos_java_library")

gos_java_library(
    name = "subsystems",
    srcs = glob(["*.java"]),
    visibility = ["//old_robots/y2014/GOS2014:__subpackages__"],
    deps = [
        "//libraries/GirlsOfSteelLib",
        "//libraries/GirlsOfSteelLibNavx",
        "//libraries/GirlsOfSteelLibRev",
        "//old_robots/y2014/GOS2014/src/main/java/com/gos/aerial_assist:RobotMap",
        "//old_robots/y2014/GOS2014/src/main/java/com/gos/aerial_assist/objects:Camera",
        "//old_robots/y2014/GOS2014/src/main/java/com/gos/aerial_assist/objects:EncoderGoSPidController",
        "//old_robots/y2014/GOS2014/src/main/java/com/gos/aerial_assist/objects:LspbPidPlanner",
        "@bazelrio//libraries/java/ctre/phoenix",
        "@bazelrio//libraries/java/rev/revlib",
        "@bazelrio//libraries/java/wpilib/cameraserver",
        "@bazelrio//libraries/java/wpilib/cscore",
        "@bazelrio//libraries/java/wpilib/new_commands",
        "@bazelrio//libraries/java/wpilib/ntcore",
        "@bazelrio//libraries/java/wpilib/wpilibj",
        "@bazelrio//libraries/java/wpilib/wpimath",
        "@snobot_sim//jar",
    ],
)
