load("//build_scripts/bazel:java_rules.bzl", "gos_java_library")

gos_java_library(
    name = "autonomous",
    srcs = glob(["*.java"]),
    visibility = ["//y2018/2018PowerUp:__subpackages__"],
    deps = [
        "//libraries/GirlsOfSteelLib",
        "//libraries/GirlsOfSteelLibNavx",
        "//libraries/GirlsOfSteelLibRev",
        "//y2018/2018PowerUp/src/main/java/com/gos/power_up:GameData",
        "//y2018/2018PowerUp/src/main/java/com/gos/power_up:RobotMap",
        "//y2018/2018PowerUp/src/main/java/com/gos/power_up/commands",
        "//y2018/2018PowerUp/src/main/java/com/gos/power_up/subsystems",
        "@bazelrio//libraries/java/ctre/phoenix",
        "@bazelrio//libraries/java/rev/revlib",
        "@bazelrio//libraries/java/wpilib/cameraserver",
        "@bazelrio//libraries/java/wpilib/cscore",
        "@bazelrio//libraries/java/wpilib/new_commands",
        "@bazelrio//libraries/java/wpilib/ntcore",
        "@bazelrio//libraries/java/wpilib/wpilibj",
        "@bazelrio//libraries/java/wpilib/wpimath",
        "@snobot_sim//jar",
    ],
)
