load("//build_scripts/bazel:java_rules.bzl", "gos_java_library")

gos_java_library(
    name = "auton",
    srcs = glob(["*.java"]),
    visibility = ["//codelabs/pid:__subpackages__"],
    deps = [
        "//libraries/GirlsOfSteelLib",
        "//libraries/GirlsOfSteelLibNavx",
        "//libraries/GirlsOfSteelLibRev",
        "//codelabs/pid/src/main/java/com/gos/codelabs/pid:Constants",
        "//codelabs/pid/src/main/java/com/gos/codelabs/pid/subsystems",
        "@bazelrio//libraries/java/ctre/phoenix",
        "@bazelrio//libraries/java/rev/revlib",
        "@bazelrio//libraries/java/wpilib/cameraserver",
        "@bazelrio//libraries/java/wpilib/cscore",
        "@bazelrio//libraries/java/wpilib/new_commands",
        "@bazelrio//libraries/java/wpilib/ntcore",
        "@bazelrio//libraries/java/wpilib/wpilibj",
        "@bazelrio//libraries/java/wpilib/wpimath",
        "@snobot_sim//jar",
    ],
)
