load("//build_scripts/bazel:java_rules.bzl", "gos_java_library")

gos_java_library(
    name = "autonomous",
    srcs = glob(["*.java"]),
    visibility = ["//old_robots/y2015/GoS2015:__subpackages__"],
    deps = [
        "//libraries/GirlsOfSteelLib",
        "//libraries/GirlsOfSteelLibNavx",
        "//libraries/GirlsOfSteelLibRev",
        "//old_robots/y2015/GoS2015/src/main/java/com/gos/recycle_rush/robot:RobotMap",
        "//old_robots/y2015/GoS2015/src/main/java/com/gos/recycle_rush/robot/subsystems",
        "//old_robots/y2015/GoS2015/src/main/java/com/gos/recycle_rush/robot/commands/collector",
        "//old_robots/y2015/GoS2015/src/main/java/com/gos/recycle_rush/robot/commands/drive",
        "//old_robots/y2015/GoS2015/src/main/java/com/gos/recycle_rush/robot/commands/lifter",
        "//old_robots/y2015/GoS2015/src/main/java/com/gos/recycle_rush/robot/commands/shack",
        "@bazelrio//libraries/java/ctre/phoenix",
        "@bazelrio//libraries/java/rev/revlib",
        "@bazelrio//libraries/java/wpilib/cameraserver",
        "@bazelrio//libraries/java/wpilib/cscore",
        "@bazelrio//libraries/java/wpilib/new_commands",
        "@bazelrio//libraries/java/wpilib/ntcore",
        "@bazelrio//libraries/java/wpilib/wpilibj",
        "@bazelrio//libraries/java/wpilib/wpimath",
        "@snobot_sim//jar",
    ],
)
