load("//build_scripts/bazel:java_rules.bzl", "gos_java_library")

gos_java_library(
    name = "autonomous",
    srcs = glob(["*.java"]),
    visibility = ["//old_robots/y2016/TeamSquirtle:__subpackages__"],
    deps = [
        "//libraries/GirlsOfSteelLib",
        "//libraries/GirlsOfSteelLibNavx",
        "//libraries/GirlsOfSteelLibRev",
        "//old_robots/y2016/TeamSquirtle/src/main/java/com/gos/preseason2016/team_squirtle/robot:RobotMap",
        "//old_robots/y2016/TeamSquirtle/src/main/java/com/gos/preseason2016/team_squirtle/robot/commands",
        "//old_robots/y2016/TeamSquirtle/src/main/java/com/gos/preseason2016/team_squirtle/robot/subsystems",
        "@bazelrio//libraries/java/ctre/phoenix",
        "@bazelrio//libraries/java/rev/revlib",
        "@bazelrio//libraries/java/wpilib/cameraserver",
        "@bazelrio//libraries/java/wpilib/cscore",
        "@bazelrio//libraries/java/wpilib/new_commands",
        "@bazelrio//libraries/java/wpilib/ntcore",
        "@bazelrio//libraries/java/wpilib/wpilibj",
        "@bazelrio//libraries/java/wpilib/wpimath",
        "@snobot_sim//jar",
    ],
)
